# weather-mcp-server

./: LICENSE  Makefile  README.md  pyproject.toml
src/: __init__.py
src/weather_mcp_server/: __init__.py  server.py
src/weather_mcp_server/tools/: __init__.py  weather.py
